[gd_scene load_steps=6 format=3 uid="uid://dxmubkwfi514i"]

[ext_resource type="Script" path="res://QuailEgg.gd" id="1_8djhc"]
[ext_resource type="Texture2D" uid="uid://cv57ythpte4y7" path="res://assets/objects/QuailEgg.png" id="2_qtnj2"]
[ext_resource type="AudioStream" uid="uid://cnv076cpq3vdk" path="res://assets/sounds/EggHatch.ogg" id="3_y086k"]

[sub_resource type="CircleShape2D" id="CircleShape2D_gf6v1"]
radius = 4.0

[sub_resource type="Curve" id="Curve_vk8y7"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[node name="QuailEgg" type="Area2D"]
script = ExtResource("1_8djhc")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_qtnj2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_gf6v1")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_y086k")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
lifetime = 2.0
one_shot = true
speed_scale = 8.11
explosiveness = 1.0
direction = Vector2(0, -1)
spread = 75.0
gravity = Vector2(0, 0)
initial_velocity_min = 5.0
initial_velocity_max = 10.0
scale_amount_max = 2.0
scale_amount_curve = SubResource("Curve_vk8y7")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
